--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "complete-react-course",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "axios": "^0.19.2",
     "firebase": "^7.14.5",
     "node-sass": "^4.14.1",
     "react": "^16.8.6",
